; ModuleID = '/home/carl/AnghaBench/linux/kernel/trace/extr_trace.c_tracer_tracing_off.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/trace/extr_trace.c_tracer_tracing_off.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.trace_array = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tracer_tracing_off(%struct.trace_array* %0) #0 {
  %2 = alloca %struct.trace_array*, align 8
  store %struct.trace_array* %0, %struct.trace_array** %2, align 8
  %3 = load %struct.trace_array*, %struct.trace_array** %2, align 8
  %4 = getelementptr inbounds %struct.trace_array, %struct.trace_array* %3, i32 0, i32 1
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %14

8:                                                ; preds = %1
  %9 = load %struct.trace_array*, %struct.trace_array** %2, align 8
  %10 = getelementptr inbounds %struct.trace_array, %struct.trace_array* %9, i32 0, i32 1
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = call i32 @ring_buffer_record_off(i64 %12)
  br label %14

14:                                               ; preds = %8, %1
  %15 = load %struct.trace_array*, %struct.trace_array** %2, align 8
  %16 = getelementptr inbounds %struct.trace_array, %struct.trace_array* %15, i32 0, i32 0
  store i32 1, i32* %16, align 8
  %17 = call i32 (...) @smp_wmb()
  ret void
}

declare dso_local i32 @ring_buffer_record_off(i64) #1

declare dso_local i32 @smp_wmb(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
